# FENIX

./: .env.example  .env.production  .gitignore  .pre-commit-config.yaml  CLAUDE.md  MONITORING_SYSTEM_FIXES.md  Makefile  PRODUCTION.md  PRODUCTION_SERVER_VERIFICATION_COMPLETE.md  README.md  SERVER_VERIFICATION_COMMANDS.md  SYSTEM_VERIFICATION_REPORT.md  deployment.sh  docker-compose.yml  fenix-describe.txt  pyproject.toml  quick-deploy.sh  rollback.sh  test_monitoring_flow.py  verify_deployment.sh
.claude/: settings.local.json
.github/workflows/: deploy.yml
fenix-archer/: Dockerfile
fenix-archer/src/: main.py
fenix-bolt/: Dockerfile
fenix-bolt/src/: main.py
fenix-core/: Dockerfile
fenix-core/src/: main.py
fenix-dashboard/: Dockerfile  README.md  index.html  nginx.conf
fenix-eagle/: Dockerfile  requirements.txt
fenix-eagle/src/: config.py  main.py
fenix-eagle/src/database/: migrations.py  models.py
fenix-eagle/src/models/: tender_models.py
fenix-eagle/src/services/: acc_scraper.py  ai_service.py  buildingconnected_scraper.py  crawl4ai_scraper.py  crawler_service.py  deduplication_service.py  email_service.py  http_client_service.py  poptavky_cz_scraper.py  scheduler.py  scraper_service.py
fenix-gateway/: Dockerfile  requirements.txt
fenix-gateway/src/: main.py
fenix-oracle/: Dockerfile
fenix-oracle/src/: main.py
fenix-shield/: Dockerfile
fenix-shield/src/: main.py
scripts/: backup.sh  deploy.sh  init-db.sql  prepare-server.sh  quick-start.sh  restore-backup.sh  setup-auto-deploy.sh  verify_deployment.py
